--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-merlot
-title: Welcome to the OvenHouse website!
-description: testing... testing
+title: OvenHouse
+description: Bringing folk tradition to the next generation. Put down your work and jump into the world of Hansel & Gretel!
