--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-merlot
+title: Ovenhouse
+description: Bringing folk tradition to the next generation. Put down your work and jump into the world of Hansel & Gretel!	
